Had to move View into Controller for flask to work properly

--- a/Controller/templates/UI.html
+++ b/Controller/templates/UI.html
@@ -69,7 +69,7 @@
         <option value="JFK">John F. Kennedy International Airport (JFK)</option>
       </select>
     </div>
-  <button type="button">Find the cheapest flight route</button>
+  <button type="submit">Find the cheapest flight route</button>
 </div>  
 </body>
 </html>
